# seemps2

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG  CMakeLists.txt  MANIFEST.in  README.md  chebyshev_multivariate.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/workflows/: cibuildwheel.yml  github-pages.yml  jobs.yml  pages.yml  publish.yml  release.yml
benchmark/: benchmark.py  benchmark_mps.py
docs/: conf.py  contributing.rst  getting_started.rst  index.rst  refs.bib  requirements.txt  seemps_algorithms.rst  seemps_analysis.rst  seemps_analysis_chebyshev.rst  seemps_analysis_differentiation.rst  seemps_analysis_integration.rst  seemps_analysis_interpolation.rst  seemps_analysis_loading.rst  seemps_analysis_operators.rst  seemps_analysis_optimization.rst  seemps_analysis_pde.rst  seemps_analysis_spaces.rst  seemps_analysis_states.rst  seemps_analysis_ttcross.rst  seemps_examples.rst  seemps_hdf5.rst  seemps_objects.rst  seemps_objects_canonical.rst  seemps_objects_hamiltonians.rst  seemps_objects_mpo.rst  seemps_objects_mps.rst  seemps_objects_sum.rst  seemps_register.rst
docs/algorithms/: arnoldi.rst  bicgs.rst  cgs.rst  chebyshev.rst  comptree.rst  crank_nicolson.rst  dmrg.rst  dmrg_solve.rst  gmres.rst  gradient_descent.rst  index.rst  lagrange.rst  mps_simplification.rst  polynomials.rst  power_method.rst  qft.rst  runge_kutta.rst  sketching.rst  split_step.rst  tdvp.rst  tebd_evolution.rst  tensor_canonical.rst  tensor_schmidt.rst  tensor_split.rst  tensor_to_mps.rst  tensor_update.rst  tt-cross.rst
examples/: Chebyshev.ipynb  ComputationTree.ipynb  DMRG.ipynb  Differentiation.ipynb  Integration.ipynb  Interpolation.ipynb  Optimization.ipynb  PDE.ipynb  TCI.ipynb  TT-Cross.ipynb
examples/itensor_comparison/: 01_benchmark_seemps.ipynb  02_benchmark_itensors.ipynb  03_plot_benchmarks.ipynb
scripts/: make.cmd  make.py  make.sh  statistics.ps1  tree.py
seemps/: __init__.py  cgs.py  evolution.py  expectation.py  hamiltonians.py  hdf5.py  mpo.py  qft.py  tools.py  typing.py  version.py
seemps/analysis/: __init__.py  chebyshev.py  cross.py  evolution.py  factories.py  finite_differences.py  integrals.py  interpolation.py  mesh.py  operators.py  sampling.py  space.py
seemps/cross/: __init__.py  cross.py  cross_new.py  maxvol.py  mesh.py  new_cross.py  skeleton.py
seemps/evolution/: __init__.py  euler.py  runge_kutta.py  trotter.py
seemps/operators/: __init__.py  mpo.py  mposum.py
seemps/optimization/: __init__.py  arnoldi.py  descent.py  dmrg.py
seemps/register/: __init__.py  circuit.py  qubo.py  transforms.py
seemps/state/: __init__.py  _contractions.py  array.py  canonical.pxi  canonical_mps.py  contractions.pxi  core.pxd  core.py  core.pyi  core.pyx  environments.py  factories.py  mpo.pxi  mpolist.pxi  mposum.pxi  mps.pxi  mps.py  mpssum.pxi  mpssum.py  oldcore.pyx  sampling.py  strategy.cc  strategy.pxi
seemps/truncate/: __init__.py  antilinear.py  combine.py  simplify.py
src/seemps/: __init__.py  cgs.py  expectation.py  hamiltonians.py  hdf5.py  mpo.py  qft.py  tools.py  typing.py  version.py
tests/: __init__.py  fixture_mps_states.py  profiler.py  test_TEBD.py  test_analysis_operators.py  test_arnoldi.py  test_canonical.py  test_chebyshev.py  test_circuits.py  test_combine.py  test_contractions.py  test_cross.py  test_cross_new.py  test_doctests.py  test_evolution.py  test_expectation.py  test_finite_differences.py  test_gradient_descent.py  test_hamiltonians.py  test_hdf5.py  test_interpolation.py  test_itime.py  test_linear_form.py  test_mesh.py  test_mpo.py  test_mpo_expectation.py  test_mpolist.py  test_mposum.py  test_mps.py  test_mpssum.py  test_qft.py  test_quadratic_form.py  test_random_mps.py  test_register.py  test_sampling.py  test_simplify.py  test_strategy.py  test_tools.py  test_truncate.py  tools.py
tests/analysis/: dmrg_contraction.py  mpo_contraction.py  mpo_mps_contraction.py  timing.py  two_site_gate_contraction.py
tests/test_analysis/: __init__.py  test_chebyshev.py  test_comptree.py  test_computational_tree.py  test_cross.py  test_cross_refactored.py  test_expansion.py  test_factories.py  test_finite_differences.py  test_fourier_differentiation.py  test_hdaf.py  test_integrals.py  test_integration.py  test_interpolation.py  test_lagrange.py  test_mesh.py  test_operators.py  test_optimization.py  test_polynomials.py  test_sketching.py  test_space.py  test_vector_quadratures.py  tools_analysis.py  tools_interpolation.py
tests/test_core/: __init__.py  common.py  test_canonicalize.py  test_gemm.py  test_strategy.py  test_svd.py  test_two_site_split.py
tests/test_evolution/: __init__.py  problem.py  test_TEBD.py  test_arnoldi.py  test_crank_nicolson.py  test_euler.py  test_radau.py  test_runge_kutta.py  test_runge_kutta_fehlberg.py  test_split_step.py  test_tdvp.py
tests/test_operators/: __init__.py  test_expectation.py  test_hamiltonians.py  test_interaction_graph.py  test_mpo.py  test_mpo_expectation.py  test_mpolist.py  test_mposum.py  test_projectors.py  test_quadratic_form.py
tests/test_optimization/: __init__.py  test_arnoldi.py  test_dmrg.py  test_gradient_descent.py  test_itime.py  test_itime_euler.py  test_itime_improved_euler.py  test_itime_rk.py  test_itime_rkf.py  test_power.py  tools.py
tests/test_register/: __init__.py  test_circuits.py  test_entangling_layer.py  test_hamiltonian_layer.py  test_ising_qaoa_circuit.py  test_local_layer.py  test_mpo_layer.py  test_shifts.py  test_transforms.py  test_vqe.py
tests/test_solve/: __init__.py  problems.py  test_bicgs_solve.py  test_cgs.py  test_dmrg_solve.py  test_gmres_solve.py
tests/test_states/: __init__.py  test_array.py  test_canonical.py  test_entropies.py  test_factories.py  test_gemm.py  test_mps.py  test_mps_from_vector.py  test_mpssum.py  test_random_mps.py  test_sample_states.py  test_sampling.py  test_svd.py  test_tensor_product.py  test_tensor_sum.py
tests/test_truncate/: __init__.py  test_simplify.py  test_simplify_mpo.py  test_simplify_sum.py  test_truncation.py
(+165 files in other folders)
