[build-system]
requires = ["scikit-build-core >=0.4.3", "nanobind >=1.3.2", "pybind11", "numpy", "cmake"]
build-backend = "scikit_build_core.build"

[project]
name = "SeeMPS"
version = "1.2"
dependencies = ["numpy", "scipy", "h5py", "opt-einsum"]

[project.urls]
"Homepage" = "https://github.com/juanjosegarciaripoll/seemps"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

wheel.packages = ["src/seemps"]
wheel.exclude = ["*.cc", "*.h"]

[tool.ruff]
exclude = [
    ".git",
	".github",
	"__pycache__",
	"build",
	"dist",
	"venv",
	".flake8",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Checks to ignore or add
ignore = ["E741"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
