[build-system]
requires = ["setuptools", "cython>=3.0.0", "numpy", "scipy"]
build-backend = "setuptools.build_meta"

[project]
name = "SeeMPS"
version = "1.2"
dependencies = [
    "numpy",
    "scipy",
    "h5py",
]
requires-python = ">= 3.11"

[project.urls]
"Homepage" = "https://github.com/juanjosegarciaripoll/seemps"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["seemps*"]  # package names should match these glob patterns (["*"] by default)

[tool.ruff]
exclude = [
    ".git",
	".github",
	"__pycache__",
	"build",
	"dist",
	"venv",
	".flake8",
	"scipy-stubs",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Checks to ignore or add
ignore = ["E741"]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.mypy]
plugins = ["numpy.typing.mypy_plugin"]

# TODO: Require scipy-stubs, numpy-stubs, etc.
warn_incomplete_stub = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "numpy<2.2",
    "mypy",
    "ruff>=0.9.3",
    "basedpyright",
    "opt_einsum", # To test contractions
    "matplotlib", # For the examples
    "ipykernel",
]

[tool.basedpyright]
# See https://github.com/DetachHead/basedpyright/blob/main/docs/configuration.md
# TODO: Remove this option and report underscore function being imported
reportPrivateUsage = false
# TODO: Remove these once we have well defined values for the NDArray dtypes
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnknownParameterType = false
# TODO: Remove these once we don't have variables with uppercase letters
# (e.g. in hamiltonians.py 'H' is used as a variable)
reportConstantRedefinition = false
# TODO: Remove this option once we don't use Any anywhere
reportAny = false
reportExplicitAny = false
# TODO: Explicitly ignore function output by assigning it to '_'
reportUnusedCallResult = false
# TODO: Explicitly install stubs for scipy, h5py
reportMissingTypeStubs = false
# TODO: Eliminate unused variables
reportUnusedVariable = false
reportUnusedParameter = false
# TODO: Eliminate uses of Callable without arguments
reportMissingTypeArgument = false
# TODO: use @override whenever a new implementation for a method is
# provided, even abstract methods, as per https://peps.python.org/pep-0698/
reportImplicitOverride = false
# TODO: unfortunately, we need cyclic imports
reportImportCycles = false
# TODO: we use isinstance(...) to assert types in some operations (e.g. addition
# of MPO) because we cannot believe inputs are of the right type
reportUnnecessaryIsInstance = false
reportUnreachable = false
reportUnnecessaryComparison = false
# TODO: Remove all calls in initializers
reportCallInDefaultInitializer = false
# TODO: Rename imported functions with _ prefix
reportPrivateLocalImportUsage = false
reportUnknownArgumentType = false
